# graph-std

./: .flake8  GENERATING_GRAPHS.md  README.md  convert_csr.py  gen.py  main.py  pyproject.toml  scan.py  snap_binary.py
karate/: karate_csr.duckdb  karate_random.duckdb  karate_random.snap  karate_random_edges.csv  karate_random_kuzu  karate_random_nodes.csv
karate/karate_csr/: karate_indices_edges.parquet  karate_indptr_edges.parquet  karate_metadata.parquet  karate_random_indices.parquet  karate_random_indptr.parquet  karate_random_metadata.parquet  karate_random_node_mapping.parquet  karate_random_nodes.parquet  load.sql  schema.cypher  schema.sql
